# tools

./: .gitignore  .gitmodules  Cargo.toml  README.md  _typos.toml  funding.json  justfile  licenses.sh  moss-filesystem-performance.md  stone.xml
boulder/: Cargo.toml  README.md  boulder-concurrency-test.yaml  build.rs
boulder/data/: recipeTemplate.yaml  recipeTemplate.yml
boulder/data/macros/actions/: autotools.yaml  autotools.yml  cargo.yaml  cargo.yml  ccache.yaml  cmake.yaml  cmake.yml  meson.yaml  meson.yml  misc.yaml  misc.yml  perl.yaml  perl.yml  pgo.yaml  pgo.yml  python.yaml  python.yml  qt-kde.yaml  ruby.yaml
boulder/data/macros/arch/: aarch64.yaml  base.yaml  base.yml  x86.yaml  x86.yml  x86_64-stage1.yml  x86_64-v3x.yaml  x86_64-v3x.yml  x86_64.yaml  x86_64.yml
boulder/data/macros/arch/emul32/: x86_64.yaml  x86_64.yml
boulder/data/profile.d/: default-x86_64.yaml
boulder/src/: architecture.rs  build.rs  cli.rs  container.rs  draft.rs  env.rs  lib.rs  macros.rs  main.rs  package.rs  paths.rs  profile.rs  recipe.rs  timing.rs  util.rs
boulder/src/cli/: build.rs  chroot.rs  completions.rs  new.rs  profile.rs  recipe.rs  version.rs
boulder/src/draft/: build.rs  licenses.rs  metadata.rs  monitoring.rs  upstream.rs
boulder/src/draft/metadata/: basic.rs  github.rs
boulder/src/package/: analysis.rs  collect.rs  emit.rs
boulder/src/package/analysis/: handler.rs
boulder/src/package/analysis/handler/: elf.rs
boulder/src/package/analysis/scripts/: get-py-deps.py
boulder/src/package/emit/: manifest.rs
boulder/src/package/emit/manifest/: binary.rs  json.rs
crates/boulder/: Cargo.toml
crates/boulder/data/macros/actions/: meson.yml  pgo.yml  python.yml
crates/boulder/data/macros/arch/: aarch64.yml  base.yml  x86.yml  x86_64-stage1.yml  x86_64.yml
crates/boulder/data/macros/arch/emul32/: x86_64.yml
crates/boulder/src/: architecture.rs  build.rs  builder.rs  cache.rs  cli.rs  client.rs  container.rs  dependency.rs  env.rs  job.rs  lib.rs  macros.rs  main.rs  package.rs  paths.rs  pgo.rs  profile.rs  recipe.rs  root.rs  runtime.rs  upstream.rs  util.rs
crates/boulder/src/cli/: build.rs  chroot.rs  format.rs  profile.rs  recipe.rs
crates/boulder/src/job/: pgo.rs  step.rs
crates/boulder/src/package/: analysis.rs  collect.rs  emit.rs  matcher.rs
crates/boulder/src/package/analysis/handler/: elf.rs
crates/boulder/src/package/emit/: manifest.rs
crates/boulder/src/package/emit/manifest/: binary.rs  json.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/container/: Cargo.toml  README.md
crates/container/src/: idmap.rs  lib.rs
crates/moss/: Cargo.toml  build.rs
crates/moss/src/: config.rs  dependency.rs  environment.rs  installation.rs  lib.rs  main.rs  request.rs  state.rs  stone.rs
crates/moss/src/cli/: extract.rs  index.rs  info.rs  inspect.rs  install.rs  list.rs  mod.rs  remove.rs  repo.rs  state.rs  sync.rs  version.rs
crates/moss/src/client/: cache.rs  install.rs  mod.rs  postblit.rs  prune.rs
crates/moss/src/db/: mod.rs
crates/moss/src/db/layout/: mod.rs
crates/moss/src/db/meta/: mod.rs
crates/moss/src/db/meta/migrations/: 20230912204438_init.sql
crates/moss/src/db/state/: mod.rs
crates/moss/src/package/: meta.rs  mod.rs
crates/moss/src/registry/: job.rs  mod.rs  transaction.rs
crates/moss/src/registry/plugin/: active.rs  cobble.rs  mod.rs  repository.rs
crates/moss/src/repository/: manager.rs  mod.rs
crates/stone/: Cargo.toml
crates/stone-ffi/: Cargo.toml  cbindgen.toml  test.c
crates/stone-ffi/src/: lib.rs  payload.rs
crates/stone-ffi/src/payload/: attribute.rs  index.rs  layout.rs  meta.rs
crates/stone/benches/: read.rs
crates/stone/src/: ext.rs  lib.rs  write.rs
crates/stone/src/header/: mod.rs  v1.rs
crates/stone/src/payload/: attribute.rs  content.rs  index.rs  layout.rs  meta.rs  mod.rs
crates/stone/src/read/: digest.rs  mod.rs  zstd.rs
crates/stone/src/write/: digest.rs  zstd.rs
crates/stone_recipe/: Cargo.toml
crates/stone_recipe/src/: lib.rs  macros.rs  script.rs  tuning.rs
libstone/: Cargo.toml  build.rs  cbindgen.toml
libstone/examples/: read.c
libstone/src/: lib.rs  payload.rs  stone.h
libstone/src/payload/: attribute.rs  layout.rs  meta.rs
moss/: Cargo.toml  build.rs
moss/src/: config.rs  db.rs  dependency.rs  environment.rs  installation.rs  lib.rs  main.rs  package.rs  registry.rs  remote.rs  repository.rs  request.rs  runtime.rs  signal.rs  state.rs  stone.rs  transaction.rs
moss/src/cli/: boot.rs  completions.rs  extract.rs  index.rs  info.rs  inspect.rs  install.rs  list.rs  mod.rs  pretty.rs  remote.rs  remove.rs  repo.rs  search.rs  state.rs  sync.rs  upgrade.rs  version.rs
moss/src/client/: boot.rs  cache.rs  install.rs  mod.rs  postblit.rs  prune.rs  verify.rs
moss/src/db/: meta.rs  mod.rs  state.rs
moss/src/db/layout/: mod.rs  schema.rs
moss/src/db/layout/migrations/: 20230919225204_init.sql
moss/src/db/meta/: mod.rs  schema.rs
moss/src/db/meta/migrations/: 20230912204438_init.sql
moss/src/db/state/: diesel.toml  mod.rs  schema.rs
moss/src/db/state/migrations/: 20230912172712_init.sql
moss/src/installation/: lockfile.rs
moss/src/package/: cache.rs  fetch.rs  meta.rs  metadata.rs  mod.rs  render.rs
moss/src/registry/: job.rs  mod.rs  package.rs  plugin.rs  transaction.rs
moss/src/registry/plugin/: active.rs  cobble.rs  mod.rs  repository.rs
moss/src/remote/: repository.rs
moss/src/repository/: manager.rs  mod.rs
moss/src/varlink/: com.serpentos.moss.varlink  com_serpentos_moss.rs  mod.rs
stone/: Cargo.toml
stone/benches/: read.rs
stone/src/: lib.rs  payload.rs  read.rs  reader.rs  write.rs  writer.rs
stone/src/header/: mod.rs  v1.rs
stone/src/headers/: mod.rs  v1.rs  versioning.rs
stone/src/payload/: attribute.rs  index.rs  layout.rs  meta.rs  mod.rs
stone/src/read/: digest.rs  mod.rs  zstd.rs
stone/src/write/: zstd.rs
tui/: Cargo.toml
tui/examples/: basic.rs
tui/src/: lib.rs  pretty.rs  progess.rs  program.rs  runtime.rs  widget.rs
tui/src/widget/: mod.rs  progress.rs
(+76 files in other folders)
