[workspace]
members = [
    "boulder",
    "moss",
    "crates/*",
]
default-members = [
    "moss"
]
resolver = "2"

[workspace.package]
version = "0.24.1"
edition = "2021"
rust-version = "1.78"

[workspace.dependencies]
blsforme = { git = "https://github.com/serpent-os/blsforme.git", rev = "59a8f12f7413c8eb3eaf9b8c56dea9c644fe4dab" }
bytes = "1.6.0"
chrono = "0.4.38"
clap = { version = "4.5.8", features = ["derive", "string"] }
criterion = { version = "0.5.1", features = ["html_reports"] }
crossterm = "0.27.0"
derive_more = "0.99.18"
dialoguer = "0.11.0"
diesel = { version = "2.2.1", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.2.0"
dirs = "5.0.1"
elf = "0.7.4"
indicatif = "0.17.8"
itertools = "0.13.0"
fs-err = { version = "2.11.0", features = ["tokio"] }
futures = "0.3.30"
glob = "0.3.1"
hex = "0.4.3"
indextree = "4.6.1"
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
log = "0.4.22"
nom = "7.1.3"
nix = { version = "0.27.1", features = ["user", "fs", "sched", "process", "mount", "hostname", "signal", "term"] }
petgraph = "0.6.5"
rayon = "1.10.0"
regex = "1.10.5"
reqwest = { version = "0.12.5", default-features = false, features = ["brotli", "charset", "deflate", "gzip", "http2", "rustls-tls", "stream", "zstd"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.61"
thread-priority = "1.1.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["time"] }
tokio-util = { version = "0.7.11", features = ["io"] }
url = { version = "2.5.2", features = ["serde"] }
xxhash-rust = { version = "0.8.11", features = ["xxh3"] }
zstd = { version = "0.13.2", features = ["zstdmt"] }
mailparse = "0.15.0"

[profile.release]
lto = "thin"

[profile.packaging]
inherits = "release"
lto = true
codegen-units = 1
opt-level = 3
# allow packaging system to do it
strip = "none"
debug = true

# We want people who use the onboarding steps to get a nice compromise
# between fast compilation and fast runtime, but with checks in place
# and full backtraces. Hyperfine tests shows opt-level = 1 to be a good
# compromise between compile speed and runtime speed.
[profile.onboarding]
inherits = "dev"
opt-level = 1
lto = "thin"
debug = true
strip = "none"
