[package]
name = "boulder"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../crates/config" }
container = { path = "../crates/container" }
moss = { path = "../moss" }
stone = { path = "../crates/stone" }
stone_recipe = { path = "../crates/stone_recipe" }
tui = { path = "../crates/tui" }
yaml = { path = "../crates/yaml" }

chrono.workspace = true
clap.workspace = true
derive_more.workspace = true
dirs.workspace = true
elf.workspace = true
glob.workspace = true
futures.workspace = true
hex.workspace = true
itertools.workspace = true
nix.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
