[package]
name = "boulder"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# See https://github.com/serpent-os/moss/issues/231 for details
default = ["compat_dlang_emul_flush"]
# In this mode we create duplicate provides for both `386` and `x86` while depending on `x86`
compat_dlang_emul_both = []
# In this mode we create duplicate provides for both `386` and `x86` while depending on `386`
compat_dlang_emul_flush = []

[dependencies]
config = { path = "../crates/config" }
container = { path = "../crates/container" }
moss = { path = "../moss" }
serpent_buildinfo = { path = "../crates/serpent_buildinfo" }
stone = { path = "../crates/stone" }
stone_recipe = { path = "../crates/stone_recipe" }
tui = { path = "../crates/tui" }
yaml = { path = "../crates/yaml" }

chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
clap_mangen.workspace = true
derive_more.workspace = true
dirs.workspace = true
elf.workspace = true
glob.workspace = true
fs-err.workspace = true
futures-util.workspace = true
hex.workspace = true
itertools.workspace = true
nix.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
strum.workspace = true
thiserror.workspace = true
thread-priority.workspace = true
tokio.workspace = true
url.workspace = true
mailparse.workspace = true
