[package]
name = "moss"
version = "0.1.0"
edition.workspace = true

[dependencies]
config = { path = "../crates/config" }
dag = { path = "../crates/dag" }
stone = { path = "../crates/stone" }
tui = { path = "../crates/tui" }
vfs = { path = "../crates/vfs" }

bitflags.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
derive_more.workspace = true
itertools.workspace = true
futures.workspace = true
hex.workspace = true
log.workspace = true
nix.workspace = true
once_cell.workspace = true
rayon.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
strum.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
thiserror.workspace = true
url.workspace = true
xxhash-rust.workspace = true
triggers = { version = "0.1.0", path = "../crates/triggers" }
container = { version = "0.1.0", path = "../crates/container" }
