[package]
name = "moss"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
config = { path = "../crates/config" }
container = { path = "../crates/container" }
dag = { path = "../crates/dag" }
serpent_buildinfo = { path = "../crates/serpent_buildinfo" }
stone = { path = "../crates/stone" }
triggers = { path = "../crates/triggers" }
tui = { path = "../crates/tui" }
vfs = { path = "../crates/vfs" }

blsforme.workspace = true
bytes.workspace = true
chrono.workspace = true
clap_mangen.workspace = true
clap_complete.workspace = true
clap.workspace = true
derive_more.workspace = true
diesel.workspace = true
diesel_migrations.workspace = true
itertools.workspace = true
fnmatch = { path = "../crates/fnmatch" }
fs-err.workspace = true
futures-util.workspace = true
hex.workspace = true
libsqlite3-sys.workspace = true
log.workspace = true
nix.workspace = true
rayon.workspace = true
reqwest.workspace = true
serde.workspace = true
sha2.workspace = true
strum.workspace = true
tokio.workspace = true
tokio-util.workspace = true
thiserror.workspace = true
url.workspace = true
xxhash-rust.workspace = true
zbus.workspace = true

[package.metadata.cargo-machete]
# Needed for unixepoch() in src/db/state/migrations/2024-03-04-201550_init/up.sql
ignored = ["libsqlite3-sys"]
