[package]
name = "stone"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
zstd.workspace = true

[dev-dependencies.xxhash-rust]
version = "0.8.5"
features = ["xxh3"]