[package]
name = "tui"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
ratatui.workspace = true