[package]
name = "boulder"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
container = { path = "../container" }
moss = { path = "../moss" }

clap.workspace = true
dirs.workspace = true
color-eyre.workspace = true
nix.workspace = true
thiserror.workspace = true
tokio.workspace = true
