[package]
name = "boulder"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
container = { path = "../container" }
moss = { path = "../moss" }
tui = { path = "../tui" }

clap.workspace = true
dirs.workspace = true
itertools.workspace = true
nix.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
