[package]
name = "config"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs.workspace = true
futures.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
