[package]
name = "config"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs.workspace = true
fs-err.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
