[package]
name = "container"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs-err.workspace = true
nix.workspace = true
rustix.workspace = true
strum.workspace = true
thiserror.workspace = true

[lints]
workspace = true
