[package]
name = "moss"
version = "0.1.0"
edition.workspace = true

[dependencies]
config = { path = "../config" }
dag = { path = "../dag" }
stone = { path = "../stone" }
tui = { path = "../tui" }
vfs = { path = "../vfs" }

bitflags.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
itertools.workspace = true
futures.workspace = true
hex.workspace = true
log.workspace = true
nix.workspace = true
once_cell.workspace = true
rayon.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
thiserror.workspace = true 
url.workspace = true
