[package]
name = "stone"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum.workspace = true
thiserror.workspace = true
xxhash-rust.workspace = true
zstd.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "read"
harness = false
