[package]
name = "stone"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
ffi = []

[dependencies]
strum.workspace = true
thiserror.workspace = true
xxhash-rust.workspace = true
zstd.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "read"
harness = false

[lints]
workspace = true
