[package]
name = "stone_recipe"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom.workspace = true
serde.workspace = true
serde_yaml.workspace = true
strum.workspace = true
thiserror.workspace = true
url.workspace = true
