[package]
name = "stone_recipe"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom.workspace = true
serde.workspace = true
serde_yaml.workspace = true
strum.workspace = true
thiserror.workspace = true
url.workspace = true

[lints]
workspace = true
